Dockerize using Kafka cluster

--- a/doc/docker/bet-services-compose.yaml
+++ b/doc/docker/bet-services-compose.yaml
@@ -1,7 +1,13 @@
-version: '3.8'
+version: "3.8"
 
 volumes:
   postgres_data:
+    driver: local
+  zookeeper_log:
+    driver: local
+  zookeeper_data:
+    driver: local
+  broker_data:
     driver: local
 
 networks:
@@ -41,6 +47,38 @@ services:
     command: "start-dev"
     depends_on:
       - postgres
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.1.1
+    hostname: zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_log:/var/lib/zookeeper/log
+  broker:
+    image: confluentinc/cp-kafka:7.1.1
+    hostname: broker
+    container_name: broker
+    depends_on:
+      - zookeeper
+    ports:
+      - "29092:29092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    restart: on-failure
+    volumes:
+      - broker_data:/var/lib/kafka/data
   eureka:
     image: piter/bet-eureka
     ports:
@@ -49,38 +87,41 @@ services:
     image: piter/match-api
     ports:
       - "8082:8082"
-    networks:
-      - keycloak-network
     depends_on:
       - keycloak
       - eureka
+      - broker
     environment:
       SPRING_PROFILES_ACTIVE: DOCKER
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "broker:9092"
       EUREKA_INSTANCE_PREFER_IP_ADDRESS: "true"
+    restart: on-failure
   bet-api:
     image: piter/bet-api
     ports:
       - "8083:8083"
-    networks:
-      - keycloak-network
     depends_on:
       - keycloak
       - eureka
+      - broker
     environment:
       SPRING_PROFILES_ACTIVE: DOCKER
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "broker:9092"
       EUREKA_INSTANCE_PREFER_IP_ADDRESS: "true"
+    restart: on-failure
   bet-event-aggregator:
     image: piter/bet-event-aggregator
     depends_on:
       - eureka
+      - broker
     environment:
       SPRING_PROFILES_ACTIVE: DOCKER
+      SPRING_KAFKA_BOOTSTRAPSERVERS: "broker:9092"
+    restart: on-failure
   gateway:
     image: piter/bet-gateway
     ports:
       - "9090:9090"
-    networks:
-      - keycloak-network
     depends_on:
       - keycloak
       - eureka
@@ -94,8 +135,6 @@ services:
     image: piter/match-management
     ports:
       - "8081:8081"
-    networks:
-      - keycloak-network
     depends_on:
       - keycloak
       - gateway
