--- a/match-api/src/main/resources/application-DOCKER.yaml
+++ b/match-api/src/main/resources/application-DOCKER.yaml
@@ -1,34 +1,4 @@
-server.port: 8082
-spring.cloud.config.enabled: false
+spring.cloud.config.enabled: true
 
 eureka.client.serviceUrl:
   defaultZone: ${eureka.url:http://host.docker.internal:8761/eureka/}
-
-########################
-# Cloud stream
-########################
-spring.cloud.stream:
-  bindings:
-    matches-out-0:
-      destination: sample-match-topic-3
-    matches-in-0:
-      destination: sample-match-topic-3
-
-########################
-# Security
-########################
-security.mode: true
-
-spring.security.oauth2.resourceserver.opaqueToken:
-  introspection-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
-  client-id: bet-login-app
-  client-secret: DQaXG75c2bAqfHA3CXsboQek4xxF2Y6Y
-
-########################
-# Logging
-########################
-logging.level:
-  org.springframework.data.mongodb.core.ReactiveMongoTemplate: DEBUG
-  org.springframework.data.mongodb.repository.support: DEBUG
-  org.springframework.cache: TRACE
-  com.piter.match.api: DEBUG
