--- a/bet-config-repo/bet-api/application-DOCKER.yaml
+++ b/bet-config-repo/bet-api/application-DOCKER.yaml
@@ -14,7 +14,7 @@ spring.cloud.stream:
 # Security
 ########################
 spring.security.oauth2.resourceserver.opaqueToken:
-  introspection-uri: http://${keycloak.base.url:host.docker.internal}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
+  introspection-uri: ${keycloak.base.url}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
   client-id: bet-login-app
   client-secret: ${oauth.secret}
 
