Update docker config

--- a/match-management/src/main/resources/application-DOCKER.yaml
+++ b/match-management/src/main/resources/application-DOCKER.yaml
@@ -3,7 +3,7 @@
 ########################
 match-api:
   port: 9090
-  url: host.docker.internal:${match-api.port}
+  url: ${management.url.base}:${match-api.port}
 
 ########################
 # OAuth2 Security
@@ -11,15 +11,15 @@ match-api:
 spring.security.oauth2.client:
   registration.match-management:
     client-id: match-management-app
-    client-secret: gB3WsF1k6489aVlDGBwaqUfqLvO8EzpE
+    client-secret: ${oauth.secret}
     authorization-grant-type: authorization_code
     scope: openid, roles
-    redirect-uri: http://host.docker.internal:8081/login/oauth2/code/match-management
+    redirect-uri: http://${management.url.base}:8081/login/oauth2/code/match-management
   provider.match-management:
-    authorization-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/auth
-    token-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token
-    jwk-set-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/certs
-    user-info-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/userinfo
+    authorization-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/auth
+    token-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token
+    jwk-set-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/certs
+    user-info-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/userinfo
     user-name-attribute: preferred_username
 
 ########################
