--- a/bet-gateway/src/main/resources/application-DOCKER.yaml
+++ b/bet-gateway/src/main/resources/application-DOCKER.yaml
@@ -1,12 +1,12 @@
 frontend.app.uri: "http://host.docker.internal:4201"
 
 eureka.client.serviceUrl:
-  defaultZone: ${eureka.url:http://host.docker.internal:8761/eureka/}
+  defaultZone: ${eureka.url}
 
 ########################
 # Security
 ########################
 spring.security.oauth2.resourceserver.opaquetoken:
-  introspection-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
+  introspection-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
   client-id: bet-login-app
-  client-secret: DQaXG75c2bAqfHA3CXsboQek4xxF2Y6Y
+  client-secret: ${oauth.secret}
