--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -27,7 +27,7 @@
     <rest-assured.version>5.1.1</rest-assured.version>
     <awaitility.version>4.2.0</awaitility.version>
     <bet.commons.version>0.0.5-SNAPSHOT</bet.commons.version>
-    <docker.image.prefix>piter</docker.image.prefix>
+    <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
   </properties>
 
