--- a/match-management/src/main/resources/application-DOCKER.yaml
+++ b/match-management/src/main/resources/application-DOCKER.yaml
@@ -1,11 +1,4 @@
 ########################
-# Match service
-########################
-match-api:
-  port: 9090
-  url: ${management.url.base}:${match-api.port}
-
-########################
 # OAuth2 Security
 ########################
 spring.security.oauth2.client:
@@ -14,12 +7,12 @@ spring.security.oauth2.client:
     client-secret: ${oauth.secret}
     authorization-grant-type: authorization_code
     scope: openid, roles
-    redirect-uri: http://${management.url.base}:8081/login/oauth2/code/match-management
+    redirect-uri: ${management.base.url}/login/oauth2/code/match-management
   provider.match-management:
-    authorization-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/auth
-    token-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token
-    jwk-set-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/certs
-    user-info-uri: http://${management.url.base}:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/userinfo
+    authorization-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/auth
+    token-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/token
+    jwk-set-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/certs
+    user-info-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/userinfo
     user-name-attribute: preferred_username
 
 ########################
