--- a/bet-api/pom.xml
+++ b/bet-api/pom.xml
@@ -23,7 +23,7 @@
     <spring-cloud.version>2021.0.3</spring-cloud.version>
     <awaitility.version>4.2.0</awaitility.version>
     <bet.commons.version>0.0.5-SNAPSHOT</bet.commons.version>
-    <docker.image.prefix>piter</docker.image.prefix>
+    <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
   </properties>
 
