--- a/bet-gateway/pom.xml
+++ b/bet-gateway/pom.xml
@@ -21,7 +21,7 @@
   <properties>
     <java.version>17</java.version>
     <spring-cloud.version>2021.0.3</spring-cloud.version>
-    <docker.image.prefix>piter</docker.image.prefix>
+    <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
   </properties>
 
