--- a/match-api/src/main/resources/application-DOCKER.yaml
+++ b/match-api/src/main/resources/application-DOCKER.yaml
@@ -3,4 +3,4 @@ spring:
   config.import: optional:configserver:${config.server.url}
 
 eureka.client.serviceUrl:
-  defaultZone: ${eureka.url:http://host.docker.internal:8761/eureka/}
+  defaultZone: ${eureka.url}
