--- a/match-management/pom.xml
+++ b/match-management/pom.xml
@@ -24,7 +24,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <spring-cloud.version>2021.0.3</spring-cloud.version>
     <jackson.version>2.13.3</jackson.version>
-    <docker.image.prefix>piter</docker.image.prefix>
+    <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
   </properties>
 
