Update Dockerfile for bet-aggregator app because Kafka is not working on that image

--- a/bet-event-aggregator/src/main/docker/Dockerfile
+++ b/bet-event-aggregator/src/main/docker/Dockerfile
@@ -1,14 +1,11 @@
-FROM openjdk:17-alpine as builder
+FROM openjdk:17 as builder
 WORKDIR application
 ADD maven/${project.build.finalName}.jar ${project.build.finalName}.jar
 RUN java -Djarmode=layertools -jar ${project.build.finalName}.jar extract
 
-FROM openjdk:17-alpine
+FROM openjdk:17
 LABEL PROJECT_NAME=${project.artifactId} \
       PROJECT=${project.id}
-
-ENV TZ=Europe/Warsaw
-RUN apk add --no-cache tzdata
 
 EXPOSE 8080
 
@@ -17,4 +14,4 @@ COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
 COPY --from=builder application/application/ ./
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "-Duser.timezone=Europe/Warsaw", "-Djava.security.egd=file:/dev/./urandom", "org.springframework.boot.loader.JarLauncher"]
