--- a/match-management/src/main/resources/application-DOCKER.yaml
+++ b/match-management/src/main/resources/application-DOCKER.yaml
@@ -1,25 +1,18 @@
 ########################
-# Match service
-########################
-match-api:
-  port: 9090
-  url: host.docker.internal:${match-api.port}
-
-########################
 # OAuth2 Security
 ########################
 spring.security.oauth2.client:
   registration.match-management:
     client-id: match-management-app
-    client-secret: gB3WsF1k6489aVlDGBwaqUfqLvO8EzpE
+    client-secret: ${oauth.secret}
     authorization-grant-type: authorization_code
     scope: openid, roles
-    redirect-uri: http://host.docker.internal:8081/login/oauth2/code/match-management
+    redirect-uri: ${management.base.url}/login/oauth2/code/match-management
   provider.match-management:
-    authorization-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/auth
-    token-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token
-    jwk-set-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/certs
-    user-info-uri: http://host.docker.internal:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/userinfo
+    authorization-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/auth
+    token-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/token
+    jwk-set-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/certs
+    user-info-uri: ${keycloak.base.url}/realms/BetSpringBootKeycloak/protocol/openid-connect/userinfo
     user-name-attribute: preferred_username
 
 ########################
