--- a/match-api/src/main/resources/application-DEV.yaml
+++ b/match-api/src/main/resources/application-DEV.yaml
@@ -30,7 +30,5 @@ spring.security.oauth2.resourceserver.opaqueToken:
 # Logging
 ########################
 logging.level:
-  org.springframework.data.mongodb.core.ReactiveMongoTemplate: DEBUG
-  org.springframework.data.mongodb.repository.support: DEBUG
-  org.springframework.cache: TRACE
   com.piter.match.api: DEBUG
+  org.apache.kafka.clients: WARN
