--- a/match-api/src/main/resources/application-INT-TEST.yml
+++ b/match-api/src/main/resources/application-INT-TEST.yml
@@ -3,6 +3,8 @@ server:
 
 spring:
   application.name: match-api
+  main:
+    web-application-type: REACTIVE
   data:
     mongodb:
       port: 27018
