--- a/shared-library/api-commons/pom.xml
+++ b/shared-library/api-commons/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>shared-library</artifactId>
     <groupId>com.piter</groupId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>api-commons</artifactId>
@@ -59,6 +59,17 @@
       <artifactId>logstash-logback-encoder</artifactId>
       <version>7.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
+
   </dependencies>
 
 </project>
