--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -57,6 +57,13 @@
       <version>4.0.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- Required to use cloud contract with webflux reactive API -->
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>spring-web-test-client</artifactId>
+      <version>5.3.0</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Bet microservices commons -->
     <dependency>
@@ -282,7 +289,9 @@
         <version>${spring.contract.version}</version>
         <extensions>true</extensions>
         <configuration>
-          <baseClassForTests>com.piter.match.api.contract.MatchServiceBaseTest</baseClassForTests>
+          <baseClassForTests>com.piter.match.api.contract.MatchApiBaseTest</baseClassForTests>
+          <testMode>WEBTESTCLIENT</testMode>
+          <testFramework>JUNIT5</testFramework>
         </configuration>
       </plugin>
 
