Add Circle CI config files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
   setup:
     jobs:
       - path-filtering/filter:
-          base-revision: master
+          base-revision: feature/circle-CI
           mapping: |
             bet-api/.* bet-api-modified true
             bet-event-aggregator/.* bet-event-aggregator-modified true
