--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
 version: 2.1
 setup: true
 orbs:
-  path-filtering: circleci/path-filtering@0.0.2
+  path-filtering: circleci/path-filtering@0.1.3
 workflows:
   setup:
     jobs:
       - path-filtering/filter:
+          base-revision: master
           mapping: |
             bet-api/.* bet-api-modified true
             bet-event-aggregator/.* bet-event-aggregator-modified true
