Add Circle CI config files

--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -1,9 +1,5 @@
 version: 2.1
 
-orbs:
-  azure-cli: circleci/azure-cli@1.1.0
-  docker: circleci/docker@1.5.0
-
 parameters:
   bet-api-modified:
     type: boolean
@@ -53,16 +49,16 @@ jobs:
 workflows:
   bet-api:
     when:
-      - pipeline.parameters.bet-api-modified
+      - << pipeline.parameters.bet-api-modified >>
     jobs:
       - bet-api-build-and-test
   bet-event-aggregator:
     when:
-      - pipeline.parameters.bet-event-aggregator-modified
+      - << pipeline.parameters.bet-event-aggregator-modified >>
     jobs:
       - bet-event-aggregator-build-and-test
   match-api:
     when:
-      - pipeline.parameters.match-api-modified
+      - << pipeline.parameters.match-api-modified >>
     jobs:
       - match-api-build-and-test
