Update Circle CI config

--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -51,22 +51,20 @@ jobs:
   match-api-build-and-test:
     docker:
       - image: cimg/openjdk:17.0
-    working_directory: ~/bet-microservices
     steps:
       - checkout:
           path: ~/bet-microservices
       - run:
-          command: cd shared-library
-      - run:
           name: Install shared library
+          path: ~/bet-microservices/shared-library
           command: mvn -B clean install
       - run:
-          command: cd ../match-api
-      - run:
           name: Build
+          path: ~/bet-microservices/match-api
           command: mvn -B -DskipTests clean package
       - run:
           name: Test
+          path: ~/bet-microservices/match-api
           command: mvn test
 
 workflows:
@@ -87,7 +85,4 @@ workflows:
   match-api:
     when: << pipeline.parameters.match-api-modified >>
     jobs:
-      - shared-library-install
-      - match-api-build-and-test:
-          requires:
-            - shared-library-install
+      - match-api-build-and-test
