--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -111,8 +111,8 @@
     </dependency>
     <dependency>
       <groupId>de.flapdoodle.embed</groupId>
-      <artifactId>de.flapdoodle.embed.mongo.spring27x</artifactId>
-      <version>4.3.2</version>
+      <artifactId>de.flapdoodle.embed.mongo</artifactId>
+      <version>3.4.5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
