--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -51,7 +51,7 @@ jobs:
           command: mvn test
   match-api-build-and-test:
     docker:
-      - image: cimg/openjdk:19.0.1-node
+      - image: cimg/openjdk:17
     steps:
       - checkout:
           path: ~/bet-microservices
