--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: Test
           path: ~/bet-microservices/match-api
-          command: mvn test
+          command: mvn -DexcludedGroups=EmbeddedMongoDBTest test
 
 workflows:
   bet-api:
