--- a/bet-event-aggregator/pom.xml
+++ b/bet-event-aggregator/pom.xml
@@ -26,6 +26,7 @@
     <sonar.projectKey>piotrmichalowski96_bet-event-aggregator</sonar.projectKey>
     <sonar.organization>piotrmichalowski96</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.coverage.exclusions>**/domain/*, **/config/*, **/exception/*</sonar.coverage.exclusions>
   </properties>
 
   <dependencyManagement>
