--- a/bet-event-aggregator/lombok.config
+++ b/bet-event-aggregator/lombok.config
@@ -1,2 +1,3 @@
 lombok.log.fieldname = logger
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Value
+lombok.addLombokGeneratedAnnotation = true
