--- a/bet-api/pom.xml
+++ b/bet-api/pom.xml
@@ -28,6 +28,7 @@
     <sonar.projectKey>piotrmichalowski96_bet-api</sonar.projectKey>
     <sonar.organization>piotrmichalowski96</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.coverage.exclusions>**/model/*, **/config/*, **/exception/*</sonar.coverage.exclusions>
   </properties>
 
   <dependencies>
