--- a/bet-gateway/pom.xml
+++ b/bet-gateway/pom.xml
@@ -7,22 +7,23 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.2</version>
+    <version>3.1.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>com.piter.bet.gateway</groupId>
   <artifactId>bet-gateway</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
 
   <name>bet-gateway</name>
   <description>bet-gateway</description>
 
   <properties>
     <java.version>17</java.version>
-    <spring-cloud.version>2021.0.3</spring-cloud.version>
+    <spring-cloud.version>2022.0.3</spring-cloud.version>
     <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
+    <bet.commons.version>0.0.7-SNAPSHOT</bet.commons.version>
   </properties>
 
   <dependencyManagement>
@@ -42,7 +43,7 @@
     <dependency>
       <groupId>com.piter</groupId>
       <artifactId>security-commons</artifactId>
-      <version>0.0.5-SNAPSHOT</version>
+      <version>${bet.commons.version}</version>
     </dependency>
 
     <!-- Spring Cloud -->
@@ -53,10 +54,6 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-sleuth</artifactId>
     </dependency>
 
     <!-- Spring Boot -->
