--- a/bet-event-aggregator/pom.xml
+++ b/bet-event-aggregator/pom.xml
@@ -7,20 +7,20 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.2</version>
+    <version>3.1.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>com.piter.bet.event.aggregator</groupId>
   <artifactId>bet-event-aggregator</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
 
   <name>bet-event-aggregator</name>
   <description>bet-event-aggregator</description>
 
   <properties>
     <java.version>17</java.version>
-    <spring-cloud.version>2021.0.4</spring-cloud.version>
+    <spring-cloud.version>2022.0.3</spring-cloud.version>
     <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
     <sonar.projectKey>piotrmichalowski96_bet-event-aggregator</sonar.projectKey>
@@ -42,6 +42,12 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- Spring Boot -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+
     <!-- Spring Cloud -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -54,10 +60,6 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-config</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-sleuth</artifactId>
     </dependency>
 
     <!-- Other -->
@@ -84,6 +86,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-streams-test-utils</artifactId>
+      <version>3.5.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
