[FEATURE] bump spring boot version for bet api service

--- a/bet-api/src/main/resources/application-TEST.yml
+++ b/bet-api/src/main/resources/application-TEST.yml
@@ -1,9 +1,8 @@
 spring:
-  mongodb:
-    embedded:
-      version: 5.0.6
   data:
     mongodb:
       port: 0
       host: localhost
   cloud.config.enabled: false
+
+de.flapdoodle.mongodb.embedded.version: 5.0.6
